dropshot/tests/fail/bad_trait_endpoint19.stderr
error[E0277]: the trait bound `std::string::String: SharedExtractor` is not satisfied
  --> tests/fail/bad_trait_endpoint19.rs:24:5
   |
24 |     #[endpoint {
   |     ^ the trait `SharedExtractor` is not implemented for `std::string::String`, which is required by `(std::string::String, dropshot::Query<QueryParams>): dropshot::extractor::common::RequestExtractor`
   |
   = help: the following other types implement trait `SharedExtractor`:
             dropshot::Path<PathType>
             dropshot::Query<QueryType>
   = note: required for `(std::string::String, dropshot::Query<QueryParams>)` to implement `dropshot::extractor::common::RequestExtractor`
note: required by a bound in `ApiEndpoint::<StubContext>::new_for_types`
  --> src/api_description.rs
   |
   |     pub fn new_for_types<FuncParams, ReturnType>(
   |            ------------- required by a bound in this associated function
...
   |         FuncParams: RequestExtractor + 'static,
   |                     ^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<StubContext>::new_for_types`

error[E0277]: the trait bound `fn(RequestContext<<ServerImpl as MyApi>::Context>, std::string::String, dropshot::Query<QueryParams>) -> impl Future<Output = Result<dropshot::HttpResponseUpdatedNoContent, dropshot::HttpError>> + Send + 'static {<ServerImpl as MyApi>::non_extractor_as_last_argument}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_trait_endpoint19.rs:24:5
   |
20 |   #[dropshot::api_description]
   |   ---------------------------- required by a bound introduced by this call
...
24 | /     #[endpoint {
25 | |         method = GET,
26 | |         path = "/test",
27 | |     }]
28 | |     async fn non_extractor_as_last_argument(
   | |___________________________________________^ the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for fn item `fn(RequestContext<<ServerImpl as MyApi>::Context>, std::string::String, dropshot::Query<QueryParams>) -> impl Future<Output = Result<dropshot::HttpResponseUpdatedNoContent, dropshot::HttpError>> + Send + 'static {<ServerImpl as MyApi>::non_extractor_as_last_argument}`
   |
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |     pub fn new<HandlerType, FuncParams, ResponseType>(
   |            --- required by a bound in this associated function
...
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
